# trucktrack

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
data/: example_tracks.parquet  route.parquet  splitter_test_tracks.parquet
docs/: benchmark.md  index.html  movingpandas_equivalence.md
docs/filters/: index.html
docs/how/: index.html
docs/valhalla/: index.html
examples/: benchmark_stop_splitter_movingpandas.py  compare_stop_splitter_movingpandas.py  end_to_end.py  generate_and_match.py  inspect_truck.py  map_match_partitions.py  pipeline_hive_to_partitioned.py  plot_way_counts.py  validate_route_splits.py  way_counts_zoom.py  way_id_counts.py
examples/end_to_end/: stage1_generate.py  stage2_split_partition.py  stage3_map_match.py
examples/trace_visualizations/: _geofence_gap_common.py  experiment_meili.py  generate_and_match.py  generate_database.py  geofence_gap_toronto_belleville.py  geofence_gap_toronto_kingston.py  geofence_gap_toronto_ottawa.py  investigate_meili.py  multi_trip.py  quality_444_probes.py  quality_444_realistic.py  quality_flag_demos.py  quality_signals_demo.py  traffic_jam.py  traffic_jam_filtered.py
python/trucktrack/: __init__.py  _core.pyi  cli.py  inspect.py  io.py  pipeline.py  query.py  splitters.py
python/trucktrack/generate/: __init__.py  gps_errors.py  interpolator.py  models.py  noise.py  operational_errors.py  parking.py  random_trip.py  router.py  speed_profile.py  trace.py
python/trucktrack/partition/: __init__.py  classify.py  tiles.py  writer.py
python/trucktrack/valhalla/: __init__.py  _actor.py  _bridge.py  _json.py  _parsing.py  map_matching.py  pipeline.py  quality.py  routing.py
python/trucktrack/visualize/: __init__.py  _convert.py  _inspect.py  _map.py
scripts/: bench_bridges.py  demo_bridges.py  diagnose_partitions.py  generate_sample_trucks.py  generate_test_data.py  pre-push  setup_valhalla.py
slides/: _quarto.yml  index.qmd
slides/filters/: 00-pipeline.qmd  01-stale.qmd  02-speed.qmd  03-gap.qmd  04-stop.qmd  05-traffic.qmd  _quarto.yml  custom.css  figures  index.qmd
slides/filters/data/: gap_trace.parquet  gap_uturn_matched_after.parquet  gap_uturn_matched_before.parquet  gap_uturn_trace.parquet  speed_matched_after.parquet  speed_matched_before.parquet  speed_trace.parquet  stale_matched_after.parquet  stale_matched_before.parquet  stale_trace.parquet  stop_matched.parquet  stop_trace.parquet  traffic_matched.parquet  traffic_matched_after.parquet  traffic_trace.parquet
slides/how/: _quarto.yml  index.qmd
slides/scenarios/: bridge_demo.py  sample_trips.py  speed.py  stale.py  stop.py  traffic.py  valhalla_tiles.py
slides/scripts/: build_figures.py  build_valhalla_figures.py  generate_traces.py
slides/valhalla/: 00-overview.qmd  01-tiles.qmd  02-partition.qmd  03-mapmatch.qmd  04-bridge.qmd  _quarto.yml  custom.css  figures  index.qmd
slides/valhalla/data/: bridge_clean_matched.parquet  bridge_clean_trace.parquet  bridge_gappy_trace.parquet  (+4 more)
src/: geo.rs  lib.rs  partition.rs  transform.rs
src/splitters/: gap.rs  mod.rs  speed.rs  stale.rs  stop.rs  traffic.rs
tests/: test_core.py  test_generate.py  test_inspect.py  test_io.py  test_partition.py  test_query.py  test_rebalance.py  test_splitters.py  test_valhalla.py  test_valhalla_bridges.py  test_valhalla_concurrency.py  test_visualize.py  test_way_counts_zoom.py
valhalla_tiles/: valhalla.json
(+3 files in other folders)
