[package]
name = "trucktrack"
version = "0.1.26"
edition = "2021"
description = "Rust backend for trucktrack"
license = "MIT"
repository = "https://github.com/twedl/trucktrack"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[lib]
name = "trucktrack"
crate-type = ["cdylib", "rlib"]

# NOTE: pyo3, polars, and pyo3-polars must be upgraded together. pyo3-polars
# pins exact polars and pyo3 minor versions; check crates.io before bumping any
# of the three.
[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py311"] }
polars = { version = "0.53", features = ["parquet", "lazy", "temporal", "dtype-duration", "cum_agg", "diff", "abs"] }
pyo3-polars = "0.26"
fast_hilbert = "2"
