[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "trucktrack"
version = "0.1.26"
description = "High-performance trajectory splitting and analysis, powered by Rust"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "jesse tweedle", email = "jesse.tweedle@gmail.com" }]
keywords = ["trajectory", "movement", "splitting", "rust", "polars"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "polars>=1.10",
    "requests>=2.31",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "tqdm>=4.60",
]

[project.urls]
Homepage = "https://github.com/twedl/trucktrack"
Repository = "https://github.com/twedl/trucktrack"
Issues = "https://github.com/twedl/trucktrack/issues"

[project.scripts]
trucktrack = "trucktrack.cli:main"

[project.optional-dependencies]
valhalla = ["pyvalhalla>=3.6", "orjson>=3.9"]
viz = ["folium>=0.15", "branca>=0.7"]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "mypy>=1.9",
    "ruff>=0.4",
    "pyvalhalla>=3.6",
    "orjson>=3.9",
    "folium>=0.15",
    "branca>=0.7",
]

[tool.maturin]
python-source = "python"
module-name = "trucktrack._core"
features = ["pyo3/extension-module"]
exclude = ["data/*", "scripts/*", "tests/*", ".github/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["trucktrack"]

# Lifted Python-only subpackages — fully typing them is a follow-up.
[[tool.mypy.overrides]]
module = [
    "trucktrack.partition.*",
    "trucktrack.visualize.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "pyarrow.*",
    "requests.*",
    "tqdm.*",
    "valhalla.*",
    "folium.*",
    "branca.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
